// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomStringInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        aria-hidden="true"
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      />
      <div
        aria-hidden="true"
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      >
        Address
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant="eq"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-2"
          class="form-control form-control-select form-control-select-secondary show"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          is
        </button>
      </div>
      <div
        aria-hidden="true"
        class="form-group-item"
        data-aria-hidden="true"
      >
        <div
          aria-haspopup="true"
          class="input-group base-select-input-root select-input-root"
        >
          <div
            class="input-group-item"
          >
            <input
              autocomplete="off"
              class="input-root form-control input-group-inset input-group-inset-after"
              placeholder=""
              type="text"
              value=""
            />
            <div
              class="input-group-inset-item input-group-inset-item-after"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom icon-root"
                role="presentation"
              >
                <use
                  href="#caret-bottom"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomStringInput should render with data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        aria-hidden="true"
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      />
      <div
        aria-hidden="true"
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      >
        Address
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant="eq"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-4"
          class="form-control form-control-select form-control-select-secondary show"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          is
        </button>
      </div>
      <div
        aria-hidden="true"
        class="form-group-item"
        data-aria-hidden="true"
      >
        <div
          aria-haspopup="true"
          class="input-group base-select-input-root select-input-root"
        >
          <div
            class="input-group-item"
          >
            <input
              autocomplete="off"
              class="input-root form-control input-group-inset input-group-inset-after"
              placeholder=""
              type="text"
              value="123 West Road"
            />
            <div
              class="input-group-inset-item input-group-inset-item-after"
            >
              <svg
                class="lexicon-icon lexicon-icon-caret-bottom icon-root"
                role="presentation"
              >
                <use
                  href="#caret-bottom"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
